<resources>
    <string name="app_name">Finances</string>
    <string name="criacao_tabela_bd">Table \"%1$s\" created on Database.</string>
    <string name="fim_criacao_bd">Database created successfully.</string>
    <string name="fim_atualizacao_bd">Database updated successfully.</string>
    <string name="erro_criacao_bd">Error creating Database.</string>
    <string name="erro_atualizacao_bd">Error updating Database.</string>
    <string name="categoria_tit_dialog">Icons</string>
    <string name="categoria_icone">Image (icon)</string>
    <string name="categoria_descricao">(Category Name)</string>
    <string name="categoria_meta">(Limit for category)</string>
    <string name="categoria_tipo_lancamento">Entry type</string>
    <string name="categoria_lanc_despesa">Expenses</string>
    <string name="categoria_lanc_receita">Income</string>
    <string name="categoria_gravada">Category \"%1$s\" savend on DB.</string>
    <string name="categoria_obrigatorio">The fields \"Name\" and \"Limit\" must have value.</string>
    <string name="ok_button">OK</string>
    <string name="lista_pago">Paid:</string>
    <string name="lista_a_pagar">Remaining:</string>
    <string name="lista_meta">Limit diff.:</string>
    <string name="progess_aguarde">Wait</string>
    <string name="progress_message">Updating data...</string>
    <string name="categoria_title_dlg_excluir">Delete category</string>
    <string name="categoria_message_dlg_excluir">Delete this category and respective entries?</string>
    <string name="sim_button">Yes</string>
    <string name="nao_button">No</string>
    <string name="erro_iniciar_bd">"Error on start DAO."</string>
    <string name="categoria_excluida">Category \"%1$s\" deleted.</string>
    <string name="categoria_periodo">Period: %1$s (%2$s - %3$s)</string>
    <string name="lancamento_periodo">Period: %1$s (%2$s - %3$s)</string>
    <string name="categoria_valor_balanco">Balance (In - Ex): %1$s</string>
    <string name="lancamento_valor_saldo">Paid : %1$s - Remaining: %2$s</string>
    <string name="lancamento_pago_original">Paid %1$s of %2$s</string>
    <string name="lancamento_categoria_icone">Category</string>
    <string name="lancamento_campos">Entry</string>
    <string name="lancamento_descricao">(Description)</string>
    <string name="lancamento_vencimento">(Maturity)</string>
    <string name="lancamento_pagamento">(Paid date)</string>
    <string name="lancamento_valor">(Value)</string>
    <string name="lancamento_valor_pago">(Paid value)</string>
    <string name="lancamento_datas">Dates (Maturity/Paid date)</string>
    <string name="lancamento_valores">Values (Initial/Paid value)</string>
    <string name="lancamento_gravado">Entry \"%1$s\" savend on DB.</string>
    <string name="lancamento_obrigatorio">The fields \"Description\", \"Maturity\" and \"Value\" must have value.</string>
    <string name="lancamento_lista_vencimento">Maturity: %1$s</string>
    <string name="lancamento_lista_pagamento">Paid date: %1$s</string>
    <string name="lancamento_lista_erro">Error getting category from list</string>
    <string name="lancamento_nao_pago">(don\'t paid)</string>
    <string name="lancamento_title_dlg_excluir">Delete entry</string>
    <string name="lancamento_message_dlg_excluir">Delete this entry?</string>
    <string name="lancamento_excluido">Entry \"%1$s\" deleted.</string>
    <string name="lancamento_liquidado">Entry \"%1$s\" paid.</string>
    <string name="lancamento_estornado">Entry \"%1$s\" reversed.</string>
    <string name="lancamento_notificacao">Notification</string>
    <string name="lancamento_horario">Notification time: %1$s </string>
    <string name="lancamento_notificar">Notify maturity</string>
    <string name="lancamento_foto">Photo (touch to capture)</string>
    <string name="meses_dialog">Period</string>
    <string name="menu_descricao">Sort by description</string>
    <string name="menu_vencimento">Sort by maturity</string>
    <string name="menu_valor">Sort by value</string>
    <string name="menu_mes">Selec Period</string>
    <string name="notificacao_title">Maturity Alert</string>
    <string name="notificacao_text">The entry \"%1$s\" reached maturity date</string>
    <string name="falha_sd">SD card with error or not present.</string>
    <string name="empty_graph">No data to show.</string>
    <string name="center_graph">%1$s\n%2$s - %3$s</string>
    <string name="total_categoria">Total Category \"%1$s\"</string>
    <string name="sets_dia">Cycle day</string>
    <string name="sets_dia_summary">Base date used to define the start and end dates of the financial balance cycle.</string>
    <string name="sets_notificacao">Notifications</string>
    <string name="sets_notificacao_summary">Enable/Disable app notifications.</string>
    <string name="menu_set">Settings</string>
    <string name="url_site">http://igordev.com.br</string>
    <string name="about_text">About App</string>
    <string name="about_title">About</string>
    <string name="about_label">Learn build this app.</string>
    <string name="shortcut_categoria_label">Finance (Today)</string>
    <string name="shortcut_categoria_longl">Expires today</string>
    <string name="shortcut_url_label">IgorDev</string>
    <string name="shortcut_url_longl">Learn build this app</string>
</resources>