<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lancamento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.igordev.financeiro.LancamentoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lancamento_categoria_icone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="0"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <ImageView
                    app:srcCompat="@drawable/_im010"
                    android:id="@+id/imageViewIcon"
                    android:layout_weight="1"
                    android:layout_width="@dimen/image_w_size_lancamento"
                    android:layout_height="@dimen/image_h_size_lancamento" />

                <TextView
                    android:text="Casa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewCategoria"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/default_padding"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_lista"
                    android:textStyle="normal|bold" />


            </LinearLayout>

            <TextView
                android:text="@string/lancamento_campos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_weight="1"
                android:textStyle="normal|bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextDescricao"
                android:layout_weight="0"
                android:hint="@string/lancamento_descricao" />

            <TextView
                android:text="@string/lancamento_datas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:textStyle="normal|bold"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewVencimento"
                android:layout_weight="0"
                android:textSize="@dimen/text_size_lista"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:hint="@string/lancamento_vencimento"
                android:onClick="onDatePickerClick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPagamento"
                android:layout_weight="0"
                android:textSize="@dimen/text_size_lista"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:hint="@string/lancamento_pagamento"
                android:onClick="onDatePickerClick"/>

            <TextView
                android:text="@string/lancamento_valores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_weight="1"
                android:textStyle="normal|bold"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextValor"
                android:layout_weight="0"
                android:hint="@string/lancamento_valor"
                android:inputType="numberSigned|numberDecimal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextValorPago"
                android:layout_weight="0"
                android:hint="@string/lancamento_valor_pago"
                android:inputType="numberSigned|numberDecimal" />

            <TextView
                android:text="@string/lancamento_notificacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_weight="0"
                android:textStyle="normal|bold"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchNotificar"
                android:layout_weight="0"
                android:checked="false"
                android:text="@string/lancamento_notificar"
                android:textSize="@dimen/text_size_switch"
                android:textStyle="normal|bold"
                android:paddingBottom="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHoraNotificacao"
                android:layout_weight="0"
                android:textSize="@dimen/text_size_lista"
                android:paddingBottom="@dimen/default_padding"
                android:text="@string/lancamento_horario"
                android:onClick="onTimePickerClick"/>

            <TextView
                android:text="@string/lancamento_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal|bold"
                android:textSize="@dimen/text_size_foto"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <ImageView
                android:layout_height="@dimen/image_h_size_foto"
                android:id="@+id/imageViewFoto"
                android:layout_weight="0"
                android:padding="@dimen/default_padding"
                android:layout_gravity="center_vertical|center_horizontal"
                android:scaleType="fitCenter"
                android:layout_width="300dp"
                android:onClick="onFotoClick"
                app:srcCompat="@drawable/nophoto" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveLancamento"
        android:src="@drawable/ic_done_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:onClick="onSaveLancamento"
        android:layout_margin="@dimen/default_fab_margin"
        app:borderWidth="0dp"
        android:elevation="@dimen/default_fab_elevation"
        app:backgroundTint="@color/colorAccent"
        app:rippleColor="@color/colorPrimary"/>

</FrameLayout>
