<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_categoria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.igordev.financeiro.CategoriaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/categoria_icone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textStyle="normal|bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/_im001"
                android:onClick="onClickImagem"
                android:id="@+id/imageViewIcon" />

            <TextView
                android:text="@string/categoria_tipo_lancamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textStyle="normal|bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:text="@string/categoria_lanc_receita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonReceita"
                    android:layout_weight="1"
                    android:checked="true" />

                <RadioButton
                    android:text="@string/categoria_lanc_despesa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonDespesa"
                    android:layout_weight="1" />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextDescricao"
                android:hint="@string/categoria_descricao"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:ems="10"
                android:id="@+id/editTextMeta"
                android:hint="@string/categoria_meta" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveCategoria"
        android:src="@drawable/ic_done_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:onClick="onSaveCategoria"
        android:layout_margin="@dimen/default_fab_margin"
        app:borderWidth="0dp"
        android:elevation="@dimen/default_fab_elevation"
        app:backgroundTint="@color/colorAccent"
        app:rippleColor="@color/colorPrimary"/>
</FrameLayout>
