<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        card_view:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageViewIcon"
                android:layout_width="@dimen/image_w_size_lista"
                android:layout_height="@dimen/image_h_size_lista"
                android:layout_weight="1"
                android:padding="@dimen/default_padding"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/_im001" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/default_padding">

                <TextView
                    android:id="@+id/textViewCategoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="XXXXXXX"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_lista"
                    android:textStyle="normal|bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:columnCount="1"
                        android:padding="@dimen/default_padding"
                        android:rowCount="3">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="0"
                            android:text="@string/lista_pago"
                            android:textStyle="normal|bold" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="1"
                            android:text="@string/lista_a_pagar"
                            android:textStyle="normal|bold" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="2"
                            android:text="@string/lista_meta"
                            android:textStyle="normal|bold" />
                    </GridLayout>

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:columnCount="1"
                        android:padding="@dimen/default_padding"
                        android:rowCount="3">

                        <TextView
                            android:id="@+id/textViewPago"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="0"
                            android:gravity="right"
                            android:text="1000,00" />


                        <TextView
                            android:id="@+id/textViewAPagar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="1"
                            android:gravity="right"
                            android:text="1000,00" />


                        <TextView
                            android:id="@+id/textViewDifMeta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="2"
                            android:gravity="right"
                            android:text="1000,00" />
                    </GridLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>